--- a/src/app/pages/auth/components/register/register.component.scss
+++ b/src/app/pages/auth/components/register/register.component.scss
@@ -7,32 +7,92 @@
   &__container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 90%;
     min-height: 100vh;
     margin: 0 auto;
 
     .personal-office {
-      max-width: 50%;
-      height: 70vh;
+      max-width: 70%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
 
+      .personal-greetings {
+        margin-bottom: 55px;
+
+        &__title {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 72px;
+          line-height: 100%;
+          margin-bottom: 29px;
+        }
+
+        &__content {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 22px;
+          line-height: 140%;
+        }
+      }
+    }
+
+    .personal-service {
+      width: 30%;
     }
 
     .auth-form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       width: 100%;
+      height: 300px;
+      margin-top: 40px;
 
       &-item {
+        height: 36px;
         display: flex;
         flex-direction: column;
+
+        &__label {
+          font-weight: 500;
+          font-size: 28px;
+          line-height: 130%;
+        }
+
+        &__validation-code,
+        &__phone {
+          color: #FFFFFF;
+          background-color: transparent;
+          outline: none;
+          height: 30px;
+          border-bottom: 1px solid #B6B6B6;
+        }
+
+        &__validation-code::placeholder,
+        &__phone::placeholder {
+          color: #B6B6B6;
+        }
+
+        &__validation-code::focus,
+        &__phone::focus {
+          background-color: #FFFFFF;
+        }
       }
 
       &-button {
+        cursor: pointer;
+        text-transform: uppercase;
+        margin-top: 76px;
         width: 60%;
         padding: 20px 0;
         background: #FFFFFF;
-        border-radius: 10px
+        border-radius: 10px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 121%;
       }
     }
   }
