--- a/src/app/core/auth/components/register/register.component.scss
+++ b/src/app/core/auth/components/register/register.component.scss
@@ -1,10 +1,7 @@
 .auth-page {
   width: 100vw;
-  background: radial-gradient(
-    106.64% 106.64% at 50% 50%,
-    #515e6b 0%,
-    #162330 63.54%
-  );
+  background: url(../../../../../assets/images/auth_background.png) top center;
+  background-attachment: fixed;
   font-family: 'Gilroy';
   color: #ffffff;
 
@@ -17,29 +14,35 @@
     margin: 0 auto;
 
     .personal-office {
-      max-width: 70%;
+      max-width: 60%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
 
       .personal-greetings {
-        margin-bottom: 55px;
+        margin-bottom: 36px;
 
         &__title {
-          font-style: normal;
-          font-weight: 400;
-          font-size: 72px;
-          line-height: 100%;
-          margin-bottom: 29px;
+          font-weight: 500;
+          font-size: 62px;
+          line-height: 110%;
+          margin-bottom: 40px;
         }
 
         &__content {
-          font-style: normal;
           font-weight: 400;
-          font-size: 22px;
-          line-height: 140%;
+          font-size: 20px;
+          line-height: 160%;
           color: #dedede;
         }
+      }
+
+      &__description {
+        margin-top: 70px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 140%;
+        color: #a4a4a4;
       }
     }
 
@@ -52,11 +55,12 @@
       flex-direction: column;
       justify-content: space-between;
       width: 100%;
-      height: 300px;
-      margin-top: 40px;
+      height: 450px;
+      align-items: flex-start;
 
       &-item {
         height: 36px;
+        width: 100%;
         display: flex;
         flex-direction: column;
 
@@ -64,6 +68,7 @@
           font-weight: 500;
           font-size: 28px;
           line-height: 130%;
+          margin-bottom: 18px;
         }
 
         &__validation-code,
@@ -78,6 +83,9 @@
         &__validation-code::placeholder,
         &__phone::placeholder {
           color: #b6b6b6;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 130%;
         }
 
         &__validation-code::focus,
@@ -86,14 +94,33 @@
         }
       }
 
+      &-checkbox {
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        color: #bababa;
+
+        &__label {
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 140%;
+        }
+
+        &__success {
+          height: 26px;
+          width: 26px;
+          margin-right: 10px;
+          accent-color: black;
+        }
+      }
+
       &-button {
         cursor: pointer;
-        text-transform: uppercase;
         margin-top: 76px;
         width: 60%;
         padding: 20px 0;
         background: #ffffff;
-        border-radius: 10px;
+        border-radius: 45px;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
