--- a/src/app/core/auth/components/register/register.component.html
+++ b/src/app/core/auth/components/register/register.component.html
@@ -9,61 +9,74 @@
         </p>
       </div>
 
-      <!-- <mc-auth-tabs> -->
-      <form
-        [formGroup]="registrationForm"
-        (ngSubmit)="onSubmit()"
-        class="auth-form"
-      >
-        <fieldset class="auth-form-item">
-          <label for="email" class="auth-form-item__label">Email*</label>
-          <input
-            type="text"
-            class="auth-form-item__phone"
-            placeholder="Введите ваш email"
-            name="email"
-            formControlName="email"
-          />
-        </fieldset>
-
-        <fieldset class="auth-form-item">
-          <label for="password" class="auth-form-item__label">Пароль*</label>
-          <input
-            type="password"
-            class="auth-form-item__validation-code"
-            placeholder="Введите пароль"
-            name="password"
-            formControlName="password"
-          />
-        </fieldset>
-
-        <fieldset class="auth-form-checkbox">
-          <label for="checkbox" class="auth-form-checkbox__label"
-            >Я принимаю условия соглашения и даю Согласие на обработку
-            персональных данных</label
-          >
-          <input
-            [checked]="checkboxSucces"
-            (change)="checkboxSucces = !checkboxSucces"
-            type="checkbox"
-            class="auth-form-checkbox__success"
-            name="checkbox"
-          />
-        </fieldset>
-
-        <button
-          class="auth-form-button"
-          type="submit"
-          [disabled]="
-            (isSubmitting$ | async) ||
-            !checkboxSucces ||
-            !this.registrationForm.valid
-          "
+      <mc-auth-tabs>
+        <form
+          [formGroup]="registrationForm"
+          (ngSubmit)="onSubmit()"
+          class="auth-form"
         >
-          Войти
-        </button>
-      </form>
-      <!-- </mc-auth-tabs> -->
+          <fieldset class="auth-form-item">
+            <label for="email" class="auth-form-item__label">Email*</label>
+            <input
+              type="text"
+              class="auth-form-item__phone"
+              placeholder="Введите ваш email"
+              name="email"
+              formControlName="email"
+            />
+          </fieldset>
+
+          <fieldset class="auth-form-item">
+            <div style="display: flex">
+              <label for="password" class="auth-form-item__label"
+                >Пароль*</label
+              >
+              <mat-icon
+                [matTooltipClass]="{'tool-tip': true}"
+                class="example-tab-icon"
+                matTooltip="tooltip"
+                #tool="matTooltip"
+                (click)="openTooltip(tool)"
+                (focus)="tool.show()"
+                >info</mat-icon
+              >
+            </div>
+            <input
+              type="password"
+              class="auth-form-item__validation-code"
+              placeholder="Введите пароль"
+              name="password"
+              formControlName="password"
+            />
+          </fieldset>
+
+          <fieldset class="auth-form-checkbox">
+            <label for="checkbox" class="auth-form-checkbox__label"
+              >Я принимаю условия соглашения и даю Согласие на обработку
+              персональных данных</label
+            >
+            <input
+              [checked]="checkboxSucces"
+              (change)="checkboxSucces = !checkboxSucces"
+              type="checkbox"
+              class="auth-form-checkbox__success"
+              name="checkbox"
+            />
+          </fieldset>
+
+          <button
+            class="auth-form-button"
+            type="submit"
+            [disabled]="
+              (isSubmitting$ | async) ||
+              !checkboxSucces ||
+              !this.registrationForm.valid
+            "
+          >
+            Войти
+          </button>
+        </form>
+      </mc-auth-tabs>
 
       <p class="personal-office__description">
         * Цифровой автомобиль – автомобиль с функциями автоматического сбора и
