--- a/src/assets/styles/_material.scss
+++ b/src/assets/styles/_material.scss
@@ -1,4 +1,4 @@
-/* Styles for tab labels */
+/* Styles for tab */
 .mat-ink-bar {
   background-color: white !important;
 }
@@ -16,3 +16,4 @@
 .mat-tab-label-active {
   color: #ffffff !important;
 }
+/* Styles for tab */
