--- a/src/app/core/auth/components/register/register.component.scss
+++ b/src/app/core/auth/components/register/register.component.scss
@@ -64,7 +64,13 @@
         display: flex;
         flex-direction: column;
 
+        &__wrapper {
+          display: flex;
+          align-items: center;
+        }
+
         &__label {
+          margin-right: 10px;
           font-weight: 500;
           font-size: 28px;
           line-height: 130%;
