--- a/src/app/pages/auth/components/register/register.component.scss
+++ b/src/app/pages/auth/components/register/register.component.scss
@@ -1,8 +1,12 @@
 .auth-page {
   width: 100vw;
-  background: radial-gradient(106.64% 106.64% at 50% 50%, #515E6B 0%, #162330 63.54%);
+  background: radial-gradient(
+    106.64% 106.64% at 50% 50%,
+    #515e6b 0%,
+    #162330 63.54%
+  );
   font-family: 'Gilroy';
-  color: #FFFFFF;
+  color: #ffffff;
 
   &__container {
     display: flex;
@@ -55,7 +59,13 @@
         display: flex;
         flex-direction: column;
 
+        &__wrapper {
+          display: flex;
+          align-items: center;
+        }
+
         &__label {
+          margin-right: 10px;
           font-weight: 500;
           font-size: 28px;
           line-height: 130%;
@@ -63,21 +73,21 @@
 
         &__validation-code,
         &__phone {
-          color: #FFFFFF;
+          color: #ffffff;
           background-color: transparent;
           outline: none;
           height: 30px;
-          border-bottom: 1px solid #B6B6B6;
+          border-bottom: 1px solid #b6b6b6;
         }
 
         &__validation-code::placeholder,
         &__phone::placeholder {
-          color: #B6B6B6;
+          color: #b6b6b6;
         }
 
         &__validation-code::focus,
         &__phone::focus {
-          background-color: #FFFFFF;
+          background-color: #ffffff;
         }
       }
 
@@ -87,7 +97,7 @@
         margin-top: 76px;
         width: 60%;
         padding: 20px 0;
-        background: #FFFFFF;
+        background: #ffffff;
         border-radius: 10px;
         font-style: normal;
         font-weight: 500;
