--- a/src/app/pages/auth/components/tes-navigation-logo/tes-navigation-logo.component.scss
+++ b/src/app/pages/auth/components/tes-navigation-logo/tes-navigation-logo.component.scss
@@ -6,8 +6,14 @@
   border-radius: 50%;
   width: 150px;
   height: 150px;
-  background: linear-gradient(271.45deg, rgba(255, 255, 255, 0.0792) 12.99%, rgba(234, 244, 255, 0.066) 118.28%);
-  box-shadow: 4.42381px 4.42381px 8.84761px rgba(167, 180, 192, 0.16), inset 8.84761px 8.84761px 17.6952px rgba(81, 97, 113, 0.2), inset -8.84761px -8.84761px 47.7px rgba(255, 255, 255, 0.49);
+  background: linear-gradient(
+    271.45deg,
+    rgba(255, 255, 255, 0.0792) 12.99%,
+    rgba(234, 244, 255, 0.066) 118.28%
+  );
+  box-shadow: 4.42381px 4.42381px 8.84761px rgba(167, 180, 192, 0.16),
+    inset 8.84761px 8.84761px 17.6952px rgba(81, 97, 113, 0.2),
+    inset -8.84761px -8.84761px 47.7px rgba(255, 255, 255, 0.49);
   animation: 7s linear 0s normal none infinite running logo__sphere;
   -webkit-animation: 7s linear 0s normal none infinite running logo__sphere;
 
@@ -45,13 +51,18 @@
   border-radius: 50%;
   width: 300px;
   height: 300px;
-  background: linear-gradient(270.09deg, rgba(249, 252, 255, 0.2) 11.97%, rgba(211, 221, 232, 0.11) 96.87%);
-  box-shadow: 3.45738px 3.45738px 6.91476px rgba(131, 140, 150, 0.16), inset -6.91476px -6.91476px 13.8295px rgba(255, 255, 255, 0.6);
+  background: linear-gradient(
+    270.09deg,
+    rgba(249, 252, 255, 0.2) 11.97%,
+    rgba(211, 221, 232, 0.11) 96.87%
+  );
+  box-shadow: 3.45738px 3.45738px 6.91476px rgba(131, 140, 150, 0.16),
+    inset -6.91476px -6.91476px 13.8295px rgba(255, 255, 255, 0.6);
   transform: matrix(-1, 0, 0, 1, 0, 0);
   animation: 6s linear 0s reverse none infinite running logo__sphere__second;
-  -webkit-animation: 6s linear 0s reverse none infinite running logo__sphere__second;
+  -webkit-animation: 6s linear 0s reverse none infinite running
+    logo__sphere__second;
 }
-
 
 @keyframes logo__sphere__second {
   0% {
@@ -74,6 +85,7 @@
 }
 
 .logo__sphere__third {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,11 +93,25 @@
   border-radius: 50%;
   width: 450px;
   height: 450px;
-  background: linear-gradient(276.89deg, rgba(223, 231, 240, 0.06) 7.07%, rgba(227, 231, 236, 0.1) 92.87%);
-  box-shadow: 3.86393px 3.86393px 7.72786px rgba(131, 140, 150, 0.16), inset -7.72786px -7.72786px 11.46px rgba(255, 255, 255, 0.13);
+  background: linear-gradient(
+    276.89deg,
+    rgba(223, 231, 240, 0.06) 7.07%,
+    rgba(227, 231, 236, 0.1) 92.87%
+  );
+  box-shadow: 3.86393px 3.86393px 7.72786px rgba(131, 140, 150, 0.16),
+    inset -7.72786px -7.72786px 11.46px rgba(255, 255, 255, 0.13);
   transform: rotate(-180deg);
   animation: 5s linear 0s normal none infinite running logo__sphere__third;
-  -webkit-animation: 5s linear 0s normal none infinite running logo__sphere__third;
+  -webkit-animation: 5s linear 0s normal none infinite running
+    logo__sphere__third;
+}
+
+.logo__sphere__third::before {
+  content: '';
+  background: url(../../../../../assets/images/tes_logo.svg) no-repeat;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 @keyframes logo__sphere__third {
