--- a/src/app/pages/auth/components/register/register.component.html
+++ b/src/app/pages/auth/components/register/register.component.html
@@ -29,7 +29,7 @@
             />
           </fieldset>
 
-          <fieldset class="auth-form-item">
+          <!-- <fieldset class="auth-form-item">
             <div class="auth-form-item__wrapper">
               <label for="secret_key" class="auth-form-item__label"
                 >Код проверки*</label
@@ -54,7 +54,7 @@
               name="secret_key"
               formControlName="secret_key"
             />
-          </fieldset>
+          </fieldset> -->
 
           <button
             class="auth-form-button"
