--- a/src/app/pages/auth/components/register/register.component.html
+++ b/src/app/pages/auth/components/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="auth-page__container">
     <div class="personal-office">
       <div class="personal-greetings">
-        <h1 class="personal-greetings__title">Личный кабинет</h1>
+        <h1 class="personal-greetings__title">Добавить клиента</h1>
         <p class="personsl-greetings__content">
           Добро пожаловать в личный кабинет.<br />
           Авторизуйтесь для управления вашими страховыми<br />
@@ -29,32 +29,32 @@
             />
           </fieldset>
 
-          <!-- <fieldset class="auth-form-item">
-            <div class="auth-form-item__wrapper">
-              <label for="secret_key" class="auth-form-item__label"
-                >Код проверки*</label
-              >
+<!--          <fieldset class="auth-form-item">-->
+<!--            <div class="auth-form-item__wrapper">-->
+<!--              <label for="secret_key" class="auth-form-item__label"-->
+<!--                >Код проверки*</label-->
+<!--              >-->
 
-              <img
-                src="../../../../../assets/images/tooltip_item.svg"
-                alt="tool-tip"
-                [matTooltipClass]="{'tool-tip': true}"
-                class="example-tab-icon"
-                matTooltip="tooltip"
-                #tool="matTooltip"
-                (click)="openTooltip(tool)"
-                (focus)="tool.show()"
-              />
-            </div>
+<!--              <img-->
+<!--                src="../../../../../assets/images/tooltip_item.svg"-->
+<!--                alt="tool-tip"-->
+<!--                [matTooltipClass]="{'tool-tip': true}"-->
+<!--                class="example-tab-icon"-->
+<!--                matTooltip="tooltip"-->
+<!--                #tool="matTooltip"-->
+<!--                (click)="openTooltip(tool)"-->
+<!--                (focus)="tool.show()"-->
+<!--              />-->
+<!--            </div>-->
 
-            <input
-              type="text"
-              class="auth-form-item__validation-code"
-              placeholder="Мы выслали код на ваш номер"
-              name="secret_key"
-              formControlName="secret_key"
-            />
-          </fieldset> -->
+<!--            <input-->
+<!--              type="text"-->
+<!--              class="auth-form-item__validation-code"-->
+<!--              placeholder="Мы выслали код на ваш номер"-->
+<!--              name="secret_key"-->
+<!--              formControlName="secret_key"-->
+<!--            />-->
+<!--          </fieldset>-->
 
           <button
             class="auth-form-button"
@@ -72,7 +72,7 @@
     </div>
 
     <div class="personal-service">
-      <mc-tes-navigation-logo></mc-tes-navigation-logo>
+<!--      <mc-tes-navigation-logo></mc-tes-navigation-logo>-->
     </div>
     <!-- <p class="">
           <a [routerLink]="['/login']">Have an account?</a>
