--- a/src/app/pages/auth/components/register/register.component.scss
+++ b/src/app/pages/auth/components/register/register.component.scss
@@ -1,10 +1,11 @@
 .auth-page {
   width: 100vw;
-  background: radial-gradient(
-    106.64% 106.64% at 50% 50%,
-    #515e6b 0%,
-    #162330 63.54%
-  );
+  background-image: url("../assets/image/autn_client_background.png");
+  //background: radial-gradient(
+  //  106.64% 106.64% at 50% 50%,
+  //  #515e6b 0%,
+  //  #162330 63.54%
+  //);
   font-family: 'Gilroy';
   color: #ffffff;
 
