--- a/src/app/core/auth/components/register/register.component.html
+++ b/src/app/core/auth/components/register/register.component.html
@@ -4,7 +4,10 @@
       <div class="personal-greetings">
         <h1 class="personal-greetings__title">F&I Брокера</h1>
         <p class="personal-greetings__content">
-          Добро пожаловать в личный кабинет.  Авторизуйтесь, чтобы начать
+          Добро пожаловать в личный кабинет.
+        </p>
+        <p class="personal-greetings__content">
+          Авторизуйтесь, чтобы начать
           пользоваться всеми возможностями СRM-системы.
         </p>
       </div>
@@ -79,11 +82,11 @@
         </form>
       </mc-auth-tabs>
 
-      <p class="personal-office__description">
-        * Цифровой автомобиль – автомобиль с функциями автоматического сбора и
-        умной обработки данных о состоянии всех его систем, а также с
-        возможностями интеграции телематических сервисовА
-      </p>
+<!--      <p class="personal-office__description">-->
+<!--        * Цифровой автомобиль – автомобиль с функциями автоматического сбора и-->
+<!--        умной обработки данных о состоянии всех его систем, а также с-->
+<!--        возможностями интеграции телематических сервисовА-->
+<!--      </p>-->
     </div>
 
     <!-- <p class="">
