--- a/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
@@ -7,12 +7,12 @@
           Добро пожаловать в личный кабинет.
         </p>
         <p class="personal-greetings__content">
-          Авторизуйтесь, чтобы начать
-          пользоваться всеми возможностями СRM-системы.
+          Авторизуйтесь, чтобы начать пользоваться всеми возможностями
+          СRM-системы.
         </p>
       </div>
 
-      <mc-auth-tabs>
+      <mc-broker-auth-tabs>
         <form
           [formGroup]="registrationForm"
           (ngSubmit)="onSubmit()"
@@ -80,13 +80,13 @@
             Войти
           </button>
         </form>
-      </mc-auth-tabs>
+      </mc-broker-auth-tabs>
 
-<!--      <p class="personal-office__description">-->
-<!--        * Цифровой автомобиль – автомобиль с функциями автоматического сбора и-->
-<!--        умной обработки данных о состоянии всех его систем, а также с-->
-<!--        возможностями интеграции телематических сервисовА-->
-<!--      </p>-->
+      <!--      <p class="personal-office__description">-->
+      <!--        * Цифровой автомобиль – автомобиль с функциями автоматического сбора и-->
+      <!--        умной обработки данных о состоянии всех его систем, а также с-->
+      <!--        возможностями интеграции телематических сервисовА-->
+      <!--      </p>-->
     </div>
 
     <!-- <p class="">
