fix ngrx arch and links and interfaces and some bugs

--- a/src/app/pages/main-container-page/main-container-page.component.html
+++ b/src/app/pages/main-container-page/main-container-page.component.html
@@ -1,19 +1,19 @@
 <div class="wrapper">
-  <div  class='toolbar'>
-    <div class='toolbar-container'>
+  <div class="toolbar">
+    <div class="toolbar-container">
       <div class="logo__container">
         <a routerLink="/">
           <img class="logo__img" src="/assets/images/header-logo.svg" alt="" />
         </a>
-        <div class='title-container'>
+        <div class="title-container">
           <p>Кредитный калькулятор</p>
         </div>
       </div>
-      <div class='user__container'>
-        <div class='help-center'>
+      <div class="user__container">
+        <div class="help-center">
           <p>Справочный центр</p>
         </div>
-        <div class='user'>
+        <div class="user">
           <a routerLink="/">
             <img class="user__img" src="/assets/images/user-logo.svg" alt="" />
           </a>
@@ -21,11 +21,10 @@
       </div>
     </div>
   </div>
-  <main class='main-container'>
+  <main class="main-container">
     <app-navigation></app-navigation>
     <router-outlet></router-outlet>
   </main>
-<!--  <div class="wrapper__container">-->
-<!--  </div>-->
+  <!--  <div class="wrapper__container">-->
+  <!--  </div>-->
 </div>
-
