--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,29 @@
-<nav class='nav-container'>
-  <ul class='nav-list'>
-    <li class='nav-list-item'><a class='nav-list-item-link' routerLink='loan-calculation'  [routerLinkActive]='["activated"]'>Расчет кредита</a></li>
-    <li class='nav-list-item'><a class='nav-list-item-link' routerLink='processing' [routerLinkActive]='["activated"]'>Оформление</a></li>
-    <li class='nav-list-item'><a class='nav-list-item-link' routerLink='documents-payments' [routerLinkActive]='["activated"]'>Документы и платежи</a></li>
+<nav class="nav-container">
+  <ul class="nav-list">
+    <li class="nav-list-item">
+      <a
+        class="nav-list-item-link"
+        routerLink="loan-calculation"
+        [routerLinkActive]="['activated']"
+        >Расчет кредита</a
+      >
+    </li>
+    <li class="nav-list-item">
+      <a
+        class="nav-list-item-link"
+        routerLink="processing"
+        [routerLinkActive]="['activated']"
+        >Оформление</a
+      >
+    </li>
+    <li class="nav-list-item">
+      <a
+        class="nav-list-item-link"
+        routerLink="documents-payments"
+        [routerLinkActive]="['activated']"
+        >Документы и платежи</a
+      >
+    </li>
   </ul>
+  <router-outlet></router-outlet>
 </nav>
