--- a/src/app/pages/components/steps/steps.component.scss
+++ b/src/app/pages/components/steps/steps.component.scss
@@ -1,6 +1,8 @@
 ::ng-deep {
   .mat-step-icon-content {
-    display: none;
+    span {
+      display: none;
+    }
   }
 
   .mat-step-icon {
@@ -10,37 +12,24 @@
   }
 
   .mat-step-header {
+    .mat-step-icon {
+      background: #FFFFFF;
+      border: 1px solid #CAD2DA;
+    }
     .mat-step-icon-selected {
       background: #E8EFF7;
       border: 1px solid #72879E;
     }
-    .mat-step-icon {
-      //background: #FFFFFF;
-      //border: 1px solid #CAD2DA;
-    }
-  }
-
-  .mat-step-header {
     .mat-step-icon-state-edit {
       background-image: url(".././assets/image/completed-step-icon.png");
     }
   }
 
-
-  .mat-step-icon {
-    .mat-step-icon-state-number {
-      background: #FFFFFF;
-      border: 1px solid #CAD2DA;
-    }
+  .mat-stepper-vertical-line::before {
+    top: -10px;
+    bottom: -10px;
   }
-
-  //.mat-step-header .mat-step-icon {
-  //  background: #FFFFFF;
-  //  border: 1px solid #CAD2DA;
-  //}
-
-  //.mat-step-header .mat-step-header-ripple {
-  //  background: #FFFFFF;
-  //  border: 1px solid #CAD2DA;
-  //}
+  .mat-stepper-label-position-bottom .mat-horizontal-stepper-header, .mat-vertical-stepper-header {
+    padding: 10px 24px;
+  }
 }
