--- a/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
@@ -56,8 +56,8 @@
 
           <fieldset class="auth-form-checkbox">
             <label for="checkbox" class="auth-form-checkbox__label"
-              >Я принимаю условия соглашения и даю Согласие на обработку
-              персональных данных</label
+              >Я принимаю условия соглашения и даю
+              <u><b>Согласие на обработку персональных данных</b></u></label
             >
             <input
               [checked]="checkboxSucces"
