--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -1,26 +1,5 @@
 <div class="wrapper">
-  <div class="toolbar">
-    <div class="toolbar-container">
-      <div class="logo__container">
-        <a routerLink="/">
-          <img class="logo__img" src="/assets/images/header-logo.svg" alt="" />
-        </a>
-        <div class="title-container">
-          <p>Кредитный калькулятор</p>
-        </div>
-      </div>
-      <div class="user__container">
-        <div class="help-center">
-          <p>Справочный центр</p>
-        </div>
-        <div class="user">
-          <a routerLink="/">
-            <img class="user__img" src="/assets/images/user-logo.svg" alt="" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <mc-main-form-header></mc-main-form-header>
   <main class="main-container">
     <nav class="nav-container">
       <ul class="nav-list">
@@ -52,6 +31,4 @@
     </nav>
     <router-outlet></router-outlet>
   </main>
-  <!--  <div class="wrapper__container">-->
-  <!--  </div>-->
 </div>
