--- a/src/app/pages/main-form-content/componets/calculation-loan-page/calculation-loan-page.component.html
+++ b/src/app/pages/main-form-content/componets/calculation-loan-page/calculation-loan-page.component.html
@@ -1,2 +1,4 @@
-<app-side-bar></app-side-bar>
-<app-car-info></app-car-info>
+<div class="calculation-loan-container">
+  <app-side-bar [steps]="calculationSteps"></app-side-bar>
+  <app-car-info></app-car-info>
+</div>
