--- a/src/app/pages/main-form-content/componets/processing-page/processing-page.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/processing-page.component.html
@@ -1,2 +1,4 @@
-<app-side-bar></app-side-bar>
-<app-questionnaire-form></app-questionnaire-form>
+<div class="processing-container">
+  <app-side-bar [steps]="processingSteps"></app-side-bar>
+  <app-questionnaire-form></app-questionnaire-form>
+</div>
