--- a/src/app/pages/components/car-info/car-info.component.html
+++ b/src/app/pages/components/car-info/car-info.component.html
@@ -1,9 +1,14 @@
-<div class='car-info-container'>
-  <div class='car-info-title'>Информация об автомобиле</div>
-  <div class='car-info-content'>
-    <div class='car-info-details'>
-      <form  [formGroup]="form" (ngSubmit)="onSubmit(model)">
-        <formly-form [options]="options" [form]="form" [fields]="fields" [model]="model"></formly-form>
+<div class="car-info-container">
+  <div class="car-info-title">Информация об автомобиле</div>
+  <div class="car-info-content">
+    <div class="car-info-details">
+      <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <formly-form
+          [options]="options"
+          [form]="form"
+          [fields]="fields"
+          [model]="model"
+        ></formly-form>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
