--- a/src/app/pages/components/car-info/car-info.component.scss
+++ b/src/app/pages/components/car-info/car-info.component.scss
@@ -1,24 +1,24 @@
 .car-info-container {
-  position: relative;
-  width: 78%;
+  width: 100%;
   height: 80vh;
   left: 384px;
   top: 60px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
   display: flex;
   flex-direction: column;
-    .car-info-title {
-      margin-top: 47px;
-      margin-left: 35px;
-      margin-bottom: 35px;
-      width: 502px;
-      height: 39px;
-      font-size: 30px;
-      line-height: 130%;
-      color: #343E48;
-    }
+
+  .car-info-title {
+    margin-top: 47px;
+    margin-left: 35px;
+    margin-bottom: 35px;
+    width: 502px;
+    height: 39px;
+    font-size: 30px;
+    line-height: 130%;
+    color: #343e48;
+  }
   .car-info-details {
     width: 100%;
     align-items: flex-start;
@@ -32,9 +32,10 @@
       padding: 0px 0px 6px;
       gap: 18px;
       margin-bottom: 56px;
-      color: #343E48;
+      color: #343e48;
       margin-left: 35px;
-      .mat-radio-container, .mat-radio-ripple {
+      .mat-radio-container,
+      .mat-radio-ripple {
         display: none;
       }
       .mat-radio-label-content {
@@ -43,7 +44,7 @@
       .mat-radio-checked {
         .mat-radio-label-content {
           border-radius: 10px;
-          background: #72879E;
+          background: #72879e;
           gap: 10px;
         }
       }
@@ -59,15 +60,15 @@
     }
     .car-info-details-form-input {
       width: 320px;
-      .mat-input-element  {
-        background: #F2F4F7;
+      .mat-input-element {
+        background: #f2f4f7;
         border-radius: 8px;
         height: 56px;
         padding-left: 5px;
       }
       .mat-form-field-underline {
-         display: none;
-       }
+        display: none;
+      }
     }
     .mat-slider {
       position: absolute;
@@ -78,7 +79,5 @@
     .mat-slider-thumb {
       //background-image: url("");
     }
-
   }
-  }
-
+}
