--- a/src/app/pages/components/side-bar/side-bar.component.html
+++ b/src/app/pages/components/side-bar/side-bar.component.html
@@ -1,4 +1,18 @@
-<div class='side-bar'>
-<app-progress-bar></app-progress-bar>
-  <app-steps></app-steps>
+<div class="side-bar">
+  <app-progress-bar></app-progress-bar>
+
+  <mat-vertical-stepper>
+    <mat-step *ngFor="let step of steps">
+      <ng-template matStepLabel>{{ step.content }}</ng-template>
+      <ng-template matStepContent>
+        <!-- <p>This content was rendered lazily</p>
+        <button mat-button matStepperNext>Next</button> -->
+      </ng-template>
+      <ng-template matStepperIcon="phone">
+        <mat-icon>call_end</mat-icon>
+      </ng-template>
+    </mat-step>
+  </mat-vertical-stepper>
+
+  <!-- <app-steps [steps]="currentSteps"></app-steps> -->
 </div>
