--- a/src/app/pages/main-form-content/componets/documents-payments-page/components/documents/documents.component.scss
+++ b/src/app/pages/main-form-content/componets/documents-payments-page/components/documents/documents.component.scss
@@ -1,10 +1,9 @@
 .documents-container {
-  position: absolute;
-  width: 78%;
+  margin: 0 auto;
+  width: 95%;
   height: 80vh;
-  left: 384px;
   top: 124px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
 }
