--- a/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.scss
@@ -1,10 +1,7 @@
-.questionnaire-container{
-    position: absolute;
-    width: 78%;
-    height: 80vh;
-    left: 384px;
-    top: 124px;
-    background: #FFFFFF;
-    box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
-    border-radius: 30px;
+.questionnaire-container {
+  width: 100%;
+  height: 80vh;
+  background: #ffffff;
+  box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
+  border-radius: 30px;
 }
