fix progress bar

--- a/src/app/pages/components/car-info/car-info.component.scss
+++ b/src/app/pages/components/car-info/car-info.component.scss
@@ -1,8 +1,6 @@
 .car-info-container {
   width: 100%;
-  height: 80vh;
-  left: 384px;
-  top: 60px;
+  min-height: 80vh;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
