--- a/src/app/pages/main-form-content/componets/processing-page/processing-page.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/processing-page.component.scss
@@ -1,7 +1,9 @@
 .processing-container {
   display: flex;
+  margin: 0 auto;
+  gap: 15px;
   align-items: flex-start;
   justify-content: space-between;
-  width: 98%;
+  width: 96%;
   height: 98%;
 }
