--- a/src/app/pages/components/car-info/car-info.component.html
+++ b/src/app/pages/components/car-info/car-info.component.html
@@ -4,7 +4,8 @@
     <div class='car-info-details'>
       <form  [formGroup]="form" (ngSubmit)="onSubmit(model)">
         <formly-form [options]="options" [form]="form" [fields]="fields" [model]="model"></formly-form>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <formly-form [options]="options" [form]="form" [fields]="fields1" [model]="model"></formly-form>
+        <button type="submit" class="btn btn-default">Далее</button>
       </form>
     </div>
   </div>
