--- a/src/app/pages/components/steps/steps.component.scss
+++ b/src/app/pages/components/steps/steps.component.scss
@@ -21,7 +21,7 @@
       border: 1px solid #72879E;
     }
     .mat-step-icon-state-edit {
-      background-image: url(".././assets/image/completed-step-icon.png");
+      background-image: url("/assets/images/completed_step_icon.png");
     }
   }
 
