--- a/src/app/pages/components/car-info/car-info.component.scss
+++ b/src/app/pages/components/car-info/car-info.component.scss
@@ -24,6 +24,18 @@
     align-items: flex-start;
     padding: 0px 0px 6px;
     gap: 18px;
+
+    .btn {
+      background: #343E48;
+      border-radius: 6px;
+      width: 213px;
+      height: 52px;
+      color: #FFFFFF;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 121%;
+    }
+
     .car-info-details-form {
       height: 100%;
       display: flex;
@@ -34,17 +46,75 @@
       margin-bottom: 56px;
       color: #343E48;
       margin-left: 35px;
+
+      .mat-slide-toggle:not(.mat-checked) {
+        .mat-ripple-element {
+          display: none;
+        }
+      }
+
+      .mat-slide-toggle.mat-checked {
+        .mat-ripple-element {
+          display: none;
+        }
+      }
+
+      .mat-slide-toggle-bar {
+        width: 48px;
+        height: 20px;
+      }
+      .mat-slide-toggle-thumb-container {
+        top: -4px;
+        left: 8px;
+        margin: 4px;
+      }
+      .mat-slide-toggle-thumb {
+        padding: 4px;
+      }
+      .mat-slide-toggle-bar {
+        background-color: #F2F4F7;
+        padding: 4px;
+      }
+
+      .mat-slide-toggle.mat-checked {
+        .mat-slide-toggle-bar {
+          background-color: #72879E;
+        }
+        .mat-slide-toggle-thumb {
+          background-color: #FFFFFF;
+        }
+      }
+
+
+      .mat-slider-thumb-container{
+        .mat-slider-thumb {
+          width: 52px;
+          height: 24px;
+          background: url("/assets/images/background_slider.png") right -3px top -2px;
+          right: -23px;
+          bottom: -12px;
+        }
+      }
+      .mat-slider-track-fill {
+        background-color: #72879E;
+      }
+
       .mat-radio-container, .mat-radio-ripple {
         display: none;
       }
       .mat-radio-label-content {
         padding: 6px 10px;
       }
+      .mat-radio-button {
+        border-radius: 10px;
+        background-color: #F2F4F7;
+        margin-left: 10px;
+        margin-bottom: 10px;
+      }
       .mat-radio-checked {
         .mat-radio-label-content {
           border-radius: 10px;
           background: #72879E;
-          gap: 10px;
         }
       }
     }
@@ -70,15 +140,12 @@
        }
     }
     .mat-slider {
+      //margin: 0 auto !important;
       position: absolute;
       left: -345px;
       top: 38px;
       z-index: 100;
     }
-    .mat-slider-thumb {
-      //background-image: url("");
-    }
-
   }
-  }
+}
 
