--- a/src/app/pages/components/progress-bar/progress-bar.component.scss
+++ b/src/app/pages/components/progress-bar/progress-bar.component.scss
@@ -1,29 +1,27 @@
 .progress-bar__container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 30px;
 
   .progress-bat-title {
     color: #343e48;
     font-size: 18px;
+    margin: 10px 20px;
     line-height: 22px;
     font-weight: bold;
   }
 }
-// .mat-progress-bar-item {
-//   margin: 10px;
-//   width: 90%;
-// }
 
-// ::ng-deep {
-//   .mat-progress-bar-buffer {
-//     background: #f2f4f7;
-//     box-shadow: inset 2px 2px 3px rgba(69, 77, 86, 0.04);
-//     border-radius: 4px;
-//   }
-//   .mat-progress-bar-fill::after {
-//     background: linear-gradient(180deg, #72879e 0%, #a7b9cb 100%);
+::ng-deep {
+  .mat-progress-bar-buffer {
+    background: #f2f4f7;
+    box-shadow: inset 2px 2px 3px rgba(69, 77, 86, 0.04);
+    border-radius: 4px;
+  }
+  .mat-progress-bar-fill::after {
+    background: linear-gradient(180deg, #72879e 0%, #a7b9cb 100%);
 
-//     box-shadow: inset 2px 2px 3px rgba(69, 77, 86, 0.04);
-//     border-radius: 4px;
-//   }
-// }
+    box-shadow: inset 2px 2px 3px rgba(69, 77, 86, 0.04);
+    border-radius: 4px;
+  }
+}
