--- a/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.scss
@@ -1,5 +1,6 @@
 .questionnaire-container {
-  width: 100%;
+  padding: 20px;
+  min-width: 100%;
   height: 80vh;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
