init modal for formly content

--- a/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/components/questionnaire-form/questionnaire-form.component.html
@@ -1,1 +1,3 @@
-<div class="questionnaire-container"><button>qwerty</button></div>
+<div class="questionnaire-container">
+  <button mat-button (click)="openInsuranceModal()">Open dialog</button>
+</div>
