--- a/src/assets/styles/_material.scss
+++ b/src/assets/styles/_material.scss
@@ -17,3 +17,20 @@
   color: #ffffff !important;
 }
 /* Styles for tab */
+
+// ========================================
+
+/* Mat dialog styles */
+
+.mat-dialog-container {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.mat-dialog-content {
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+}
+
+/* Mat dialog styles */
