create modal without formly

--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
@@ -19,6 +19,7 @@
     }
 
     &__save-changes-button {
+      margin-top: 32px;
       padding: 10px 26.5px;
       background: #343e48;
       width: 230px;
