--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
@@ -10,22 +10,38 @@
       />
     </div>
 
-    <span class="card-body__header-status">{{ insuranceCompany.status }}</span>
+    <span
+      class="card-body__header-status"
+      [ngClass]="insuranceCompany.status"
+    ></span>
   </div>
-  <div class="card-body__casko">
-    <input type="checkbox" class="card-body__casko-checkbox" />
-    <label class="card-body__casko-label">{{ insuranceCompany.casco }}</label>
+
+  <form
+    class="card-content"
+    *ngFor="let card of insuranceCompany.insurences"
+    [formGroup]="formModal"
+  >
+    <div class="card-content__form">
+      <!-- <formly-form
+        [model]="model"
+        [fields]="fields"
+        [options]="options"
+        [form]="formModal"
+      >
+      </formly-form> -->
+
+      <input
+        type="checkbox"
+        class="card-content__form--checkbox"
+        [checked]="card.checkbox"
+      />
+      <label class="card-content__form--label">{{ card.label }}</label>
+    </div>
 
     <div class="card-body__casko-description">
-      {{ insuranceCompany.casco }}
+      {{ card.description }}
     </div>
-    <div class="card-body__casko-price">{{ insuranceCompany.casco }}</div>
-  </div>
-  <div class="card-body__osago">
-    <input type="checkbox" class="card-body__osago-checkbox" />
-    <label class="card-body__osago-label">{{ insuranceCompany.osago }}</label>
 
-    <div class="card-body__osago-description">{{ insuranceCompany.osago }}</div>
-    <div class="card-body__osago-price">{{ insuranceCompany.osago }}</div>
-  </div>
+    <div class="card-content__price">{{ card.price }}</div>
+  </form>
 </div>
