--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
@@ -1,15 +1,23 @@
 .card-body {
+  display: flex;
+  flex-direction: column;
   width: 609px;
   max-height: 207px;
   background: #ffffff;
   box-shadow: 2px 2px 19px rgba(52, 62, 72, 0.21);
   border-radius: 20px;
   margin-top: 21px;
+  padding: 26px 24px;
 
   &__header {
     display: flex;
     justify-content: space-between;
-    padding: 26px 35px 0 24px;
+
+    &-status {
+      width: 20px;
+      height: 20px;
+      border-radius: 2px;
+    }
 
     &-card {
       padding: 9px 17px;
@@ -17,4 +25,26 @@
       border-radius: 20px;
     }
   }
+
+  .card-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+
+    &__form {
+      &--checkbox {
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+.green {
+  background: linear-gradient(173.16deg, #92f9e1 -46.88%, #27c19d 94.64%);
+  border-radius: 2px;
+}
+
+.yellow {
+  background: #efce5a;
+  background-color: yellow;
 }
