--- a/src/assets/styles/_material.scss
+++ b/src/assets/styles/_material.scss
@@ -28,6 +28,7 @@
 }
 
 .mat-dialog-content {
+  max-height: 100% !important;
   margin: 0 !important;
   padding: 0 !important;
   overflow: hidden !important;
