--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
@@ -3,8 +3,9 @@
     <div class="modal-body__title">Выберите страховой полис</div>
     <div class="modal-body__cards__wrapper">
       <mc-insurance-polices-modal-card
-        *ngFor="let card of cardsObjects"
+        *ngFor="let card of cardsObjects; let i = index"
         [insuranceCompany]="card"
+        (click)="getCard(card)"
       ></mc-insurance-polices-modal-card>
     </div>
   </div>
