andd new component for dinamicly creating components

--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
@@ -38,9 +38,13 @@
       <label class="card-content__form--label">{{ card.label }}</label>
     </div>
 
-    <div class="card-body__casko-description">
+    <div class="card-content__description">
       {{ card.description }}
     </div>
+
+    <button class="card-content__options" *ngIf="card.options">
+      Настроить опции
+    </button>
 
     <div class="card-content__price">{{ card.price }}</div>
   </form>
