--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
@@ -19,7 +19,7 @@
     }
 
     &__save-changes-button {
-      margin-top: 32px;
+      margin: 32px 0;
       padding: 10px 26.5px;
       background: #343e48;
       width: 230px;
@@ -29,6 +29,15 @@
       text-align: center;
       border-radius: 6px;
       color: #ffffff;
+    }
+
+    &__cards {
+      display: flex;
+      align-items: center;
+      gap: 52px;
+      justify-content: space-between;
+      &--wrapper {
+      }
     }
   }
 }
