--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
@@ -36,6 +36,18 @@
         margin-right: 10px;
       }
     }
+
+    &__options {
+      background: #ffffff;
+      padding: 6px 22.5px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      text-align: center;
+      color: #343e48;
+      border: 1px solid #72879e;
+      border-radius: 6px;
+    }
   }
 }
 
